--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ development:
 
 test:
   <<: *default
-  database: geo_api_test
+  database: geo_api_test<%= ENV['TEST_ENV_NUMBER'] %>
 
 # For production is recommended to set DATABASE_URL env variable.
 # It will take precedence over the config defined here.
