[FEATURE] Add API Tokens for authorization

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,4 @@ SERVER_HOST=localhost
 SWAGGER_USERNAME=username
 SWAGGER_PASSWORD=password
 IPSTACK_ACCESS_KEY=ipstack_api_key
+HMAC_SECRET_KEY=super-secret
